<resources>
    <string name="app_name">MarketWithBarcode</string>
    <string name="product_name">Product Name</string>
    <string name="barcode">Barcode</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="price_for_sale">Price For Sale</string>
    <string name="save">Save</string>
    <string name="how_many">How many?</string>
    <string name="amount_0_00_uzs">Amount : 0.00 UZS</string>
    <string name="sell">Sell</string>
    <string name="cancel">Cancel</string>
</resources>