<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/choose_photo"
            android:background="@drawable/circle"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etBarCode"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:background="@drawable/et_field"
                android:hint="@string/barcode"
                android:padding="10dp"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:textColor="@color/teal_700"/>

            <ImageView
                android:id="@+id/ivBarcodeScanner"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/et_field"
                android:src="@drawable/scanner"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>


        </LinearLayout>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_field"
            android:hint="@string/product_name"
            android:padding="10dp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:inputType="text"
            android:textColor="@color/teal_700"/>

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_field"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/teal_700"/>

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_field"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/teal_700"/>

        <EditText
            android:id="@+id/etPriceForSale"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_field"
            android:hint="@string/price_for_sale"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/teal_700"/>


        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_field"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:text="@string/save"/>

    </LinearLayout>

</FrameLayout>